feat: add login, register endpoints and seed default admin/user accounts