@@ -16,12 +16,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
-    
+
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
     private final LocationRepository locationRepository;
@@ -34,50 +35,78 @@ public class UserController {
         this.locationRepository = locationRepository;
     }
 
+    // ── AUTH ──────────────────────────────────────────────────────────────────
+
+    @PostMapping(value = "/login", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<?> login(@RequestBody Map<String, String> credentials) {
+        String email    = credentials.get("email");
+        String password = credentials.get("password");
+
+        if (email == null || password == null)
+            return new ResponseEntity<>("Email and password are required", HttpStatus.BAD_REQUEST);
+
+        Optional<User> userOpt = userRepository.findByEmail(email);
+        if (userOpt.isEmpty())
+            return new ResponseEntity<>("Invalid email or password", HttpStatus.UNAUTHORIZED);
+
+        User user = userOpt.get();
+        if (!user.getPassword().equals(password))
+            return new ResponseEntity<>("Invalid email or password", HttpStatus.UNAUTHORIZED);
+
+        return new ResponseEntity<>(user, HttpStatus.OK);
+    }
+
+    // ── REGISTER (self-service, always CUSTOMER role) ─────────────────────────
+
+    @PostMapping(value = "/register", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
+    public ResponseEntity<?> register(@RequestBody User user) {
+        if (user.getName() == null || user.getName().isBlank())
+            return new ResponseEntity<>("Name is required", HttpStatus.BAD_REQUEST);
+        if (user.getEmail() == null || user.getEmail().isBlank())
+            return new ResponseEntity<>("Email is required", HttpStatus.BAD_REQUEST);
+        if (user.getPassword() == null || user.getPassword().isBlank())
+            return new ResponseEntity<>("Password is required", HttpStatus.BAD_REQUEST);
+        if (userRepository.existsByEmail(user.getEmail()))
+            return new ResponseEntity<>("Email already exists", HttpStatus.CONFLICT);
+
+        // Force CUSTOMER role on self-registration
+        Optional<Role> customerRole = roleRepository.findByName("CUSTOMER");
+        customerRole.ifPresent(user::setRole);
+
+        User saved = userRepository.save(user);
+        return new ResponseEntity<>(saved, HttpStatus.CREATED);
+    }
+
+    // ── CRUD ──────────────────────────────────────────────────────────────────
+
     @PostMapping(value = "/save", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> createUser(@RequestBody User user) {
         try {
-            // Validate required fields
-            if (user.getName() == null || user.getName().trim().isEmpty()) {
+            if (user.getName() == null || user.getName().isBlank())
                 return new ResponseEntity<>("User name is required", HttpStatus.BAD_REQUEST);
-            }
-            
-            if (user.getEmail() == null || user.getEmail().trim().isEmpty()) {
+            if (user.getEmail() == null || user.getEmail().isBlank())
                 return new ResponseEntity<>("Email is required", HttpStatus.BAD_REQUEST);
-            }
-            
-            if (user.getPassword() == null || user.getPassword().trim().isEmpty()) {
+            if (user.getPassword() == null || user.getPassword().isBlank())
                 return new ResponseEntity<>("Password is required", HttpStatus.BAD_REQUEST);
-            }
-            
-            // Check if email already exists
-            if (userRepository.existsByEmail(user.getEmail())) {
+            if (userRepository.existsByEmail(user.getEmail()))
                 return new ResponseEntity<>("Email already exists", HttpStatus.CONFLICT);
-            }
-            
-            // Handle role
+
             if (user.getRole() != null && user.getRole().getId() != null) {
-                Optional<Role> roleOptional = roleRepository.findById(user.getRole().getId());
-                if (!roleOptional.isPresent()) {
-                    return new ResponseEntity<>("Role with ID '" + user.getRole().getId() + "' not found", HttpStatus.NOT_FOUND);
-                }
-                user.setRole(roleOptional.get());
+                Optional<Role> roleOpt = roleRepository.findById(user.getRole().getId());
+                if (roleOpt.isEmpty())
+                    return new ResponseEntity<>("Role not found", HttpStatus.NOT_FOUND);
+                user.setRole(roleOpt.get());
             }
-            
-            // Handle village (location)
+
             if (user.getVillage() != null && user.getVillage().getId() != null) {
-                Optional<Location> villageOptional = locationRepository.findById(user.getVillage().getId());
-                if (!villageOptional.isPresent()) {
-                    return new ResponseEntity<>("Village with ID '" + user.getVillage().getId() + "' not found", HttpStatus.NOT_FOUND);
-                }
-                user.setVillage(villageOptional.get());
+                Optional<Location> villageOpt = locationRepository.findById(user.getVillage().getId());
+                if (villageOpt.isEmpty())
+                    return new ResponseEntity<>("Village not found", HttpStatus.NOT_FOUND);
+                user.setVillage(villageOpt.get());
             }
-            
-            User saved = userRepository.save(user);
-            return new ResponseEntity<>(saved, HttpStatus.CREATED);
-            
+
+            return new ResponseEntity<>(userRepository.save(user), HttpStatus.CREATED);
         } catch (Exception e) {
-            e.printStackTrace();
             return new ResponseEntity<>("Error creating user: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -88,34 +117,25 @@ public class UserController {
             @RequestParam(defaultValue = "10") int size,
             @RequestParam(defaultValue = "id") String sortBy,
             @RequestParam(defaultValue = "ASC") String direction) {
-        
-        Sort sort = direction.equalsIgnoreCase("DESC") 
-            ? Sort.by(sortBy).descending() 
-            : Sort.by(sortBy).ascending();
-        
+
+        Sort sort = direction.equalsIgnoreCase("DESC")
+            ? Sort.by(sortBy).descending() : Sort.by(sortBy).ascending();
         Pageable pageable = PageRequest.of(page, size, sort);
-        Page<User> users = userRepository.findAll(pageable);
-        return new ResponseEntity<>(users, HttpStatus.OK);
+        return new ResponseEntity<>(userRepository.findAll(pageable), HttpStatus.OK);
     }
 
     @GetMapping(value = "/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> getUserById(@PathVariable Long id) {
-        Optional<User> user = userRepository.findById(id);
-        if (user.isPresent()) {
-            return new ResponseEntity<>(user.get(), HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
-        }
+        return userRepository.findById(id)
+            .<ResponseEntity<?>>map(u -> new ResponseEntity<>(u, HttpStatus.OK))
+            .orElse(new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND));
     }
 
     @GetMapping(value = "/email/{email}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> getUserByEmail(@PathVariable String email) {
-        Optional<User> user = userRepository.findByEmail(email);
-        if (user.isPresent()) {
-            return new ResponseEntity<>(user.get(), HttpStatus.OK);
-        } else {
-            return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
-        }
+        return userRepository.findByEmail(email)
+            .<ResponseEntity<?>>map(u -> new ResponseEntity<>(u, HttpStatus.OK))
+            .orElse(new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND));
     }
 
     @GetMapping(value = "/exists/email/{email}", produces = MediaType.APPLICATION_JSON_VALUE)
@@ -125,63 +145,42 @@ public class UserController {
 
     @GetMapping(value = "/province/code/{code}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<List<User>> getUsersByProvinceCode(@PathVariable String code) {
-        List<User> users = userRepository.findByProvinceCode(code);
-        return new ResponseEntity<>(users, HttpStatus.OK);
+        return new ResponseEntity<>(userRepository.findByProvinceCode(code), HttpStatus.OK);
     }
 
     @GetMapping(value = "/province/name/{name}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<List<User>> getUsersByProvinceName(@PathVariable String name) {
-        List<User> users = userRepository.findByProvinceName(name);
-        return new ResponseEntity<>(users, HttpStatus.OK);
+        return new ResponseEntity<>(userRepository.findByProvinceName(name), HttpStatus.OK);
     }
 
     @PutMapping(value = "/update/{id}", consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> updateUser(@PathVariable Long id, @RequestBody User user) {
         try {
-            Optional<User> existingOptional = userRepository.findById(id);
-            if (!existingOptional.isPresent()) {
+            Optional<User> existingOpt = userRepository.findById(id);
+            if (existingOpt.isEmpty())
                 return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
-            }
-            
-            User existing = existingOptional.get();
-            
-            // Update fields
-            if (user.getName() != null && !user.getName().trim().isEmpty()) {
-                existing.setName(user.getName());
-            }
-            
-            if (user.getEmail() != null && !user.getEmail().trim().isEmpty()) {
-                // Check if new email already exists (excluding current user)
+
+            User existing = existingOpt.get();
+
+            if (user.getName() != null && !user.getName().isBlank()) existing.setName(user.getName());
+
+            if (user.getEmail() != null && !user.getEmail().isBlank()) {
                 Optional<User> emailUser = userRepository.findByEmail(user.getEmail());
-                if (emailUser.isPresent() && !emailUser.get().getId().equals(id)) {
+                if (emailUser.isPresent() && !emailUser.get().getId().equals(id))
                     return new ResponseEntity<>("Email already exists", HttpStatus.CONFLICT);
-                }
                 existing.setEmail(user.getEmail());
             }
-            
-            if (user.getPassword() != null && !user.getPassword().trim().isEmpty()) {
-                existing.setPassword(user.getPassword());
-            }
-            
-            if (user.getRole() != null && user.getRole().getId() != null) {
-                Optional<Role> roleOptional = roleRepository.findById(user.getRole().getId());
-                if (roleOptional.isPresent()) {
-                    existing.setRole(roleOptional.get());
-                }
-            }
-            
-            if (user.getVillage() != null && user.getVillage().getId() != null) {
-                Optional<Location> villageOptional = locationRepository.findById(user.getVillage().getId());
-                if (villageOptional.isPresent()) {
-                    existing.setVillage(villageOptional.get());
-                }
-            }
-            
-            User updated = userRepository.save(existing);
-            return new ResponseEntity<>(updated, HttpStatus.OK);
-            
+
+            if (user.getPassword() != null && !user.getPassword().isBlank()) existing.setPassword(user.getPassword());
+
+            if (user.getRole() != null && user.getRole().getId() != null)
+                roleRepository.findById(user.getRole().getId()).ifPresent(existing::setRole);
+
+            if (user.getVillage() != null && user.getVillage().getId() != null)
+                locationRepository.findById(user.getVillage().getId()).ifPresent(existing::setVillage);
+
+            return new ResponseEntity<>(userRepository.save(existing), HttpStatus.OK);
         } catch (Exception e) {
-            e.printStackTrace();
             return new ResponseEntity<>("Error updating user: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
@@ -189,16 +188,11 @@ public class UserController {
     @DeleteMapping(value = "/delete/{id}", produces = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<?> deleteUser(@PathVariable Long id) {
         try {
-            Optional<User> user = userRepository.findById(id);
-            if (!user.isPresent()) {
+            if (!userRepository.existsById(id))
                 return new ResponseEntity<>("User not found", HttpStatus.NOT_FOUND);
-            }
-            
             userRepository.deleteById(id);
             return new ResponseEntity<>("User deleted successfully", HttpStatus.OK);
-            
         } catch (Exception e) {
-            e.printStackTrace();
             return new ResponseEntity<>("Error deleting user: " + e.getMessage(), HttpStatus.INTERNAL_SERVER_ERROR);
         }
     }
